--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -30,13 +30,18 @@
     <ol>
         {% for rec in recommendations %}
             <li>
-                <strong>{{ rec.name }}</strong> by {{ rec.artists }}<br>
-                Similarity Score: {{ rec.score }}
+                <iframe style="border-radius:12px" 
+                            src="https://open.spotify.com/embed/track/{{ rec.id }}?utm_source=generator"
+                            width="50%" height="100" frameBorder="0" allowfullscreen=""
+                            allow="clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                            loading="lazy">
+                </iframe>
+                <p>Similarity Score: {{ rec.score }}</p>
             </li>
         {% endfor %}
     </ol>
-    {% else %}
+    <!-- {% else %}
         <p>No recommendations available.</p>
-    {% endif %}
+    {% endif %} -->
 </body>
 </html>
