Minor HTML fixes

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -11,7 +11,7 @@
     <div class="bop_link">
         <form method="POST">
             <p><label for="bop_link">Add Bop Link</label></p>
-            <p><input type="text" name="bop_link" placeholder="https://open.spotify.com/track/..."></p>
+            <p><input type="text" name="bop_link" size="70" placeholder="https://open.spotify.com/track/..."></p>
             <button type="submit">Search</button>
         </form>
     </div>
