--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -51,8 +51,15 @@
         {% if in_db %}
             <p></p>
         {% else %}
-            <h3>Song not in database...</h3>
+            <h3>Bop not in database...</h3>
         {% endif %}
+    {% endif %}
+    {% if add_button %}
+        <form method="POST">
+            <button type="submit">Add Bop to Database</button>
+        </form>
+    {% else %}
+        <p></p>
     {% endif %}
 </body>
 </html>
