--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -47,19 +47,19 @@
             {% endfor %}
         </ol>
     {% else %}
-        {% if in_db %}
-            <p></p>
-        {% else %}
+        {% if not_db %}
             <h3>Bop not in database...</h3>
+        {% else %}
+            <p></p>
         {% endif %}
     {% endif %}
     
-    {% if add_button %}
+    <!-- {% if add_button %}
         <form method="POST">
             <button type="submit">Add Bop to Database</button>
         </form>
     {% else %}
         <p></p>
-    {% endif %}
+    {% endif %} -->
 </body>
 </html>
