--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -1,3 +1,20 @@
 div {
     color: white;
 }
+
+html, body {
+    overflow-x: hidden; /* Disables horizontal scrolling */
+    width: 100vw; /* Ensures body width does not exceed viewport width */
+  }  
+
+.background {
+    position: absolute;
+    width: 100%;
+    /* height: 100%; */
+    z-index: -1;
+    min-height: 100vh;
+    background-repeat: no-repeat;
+    background-attachment: scroll;
+    background-position-x: center;
+    background-position-y: top;
+}
