--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -1,20 +1,61 @@
-div {
-    color: white;
-}
-
+/* background */
 html, body {
-    overflow-x: hidden; /* Disables horizontal scrolling */
-    width: 100vw; /* Ensures body width does not exceed viewport width */
-  }  
+    overflow-x: hidden;
+    width: 100vw;
+    color: white;
+    font-family: Helvetica, sans-serif;
+  }
 
 .background {
     position: absolute;
     width: 100%;
-    /* height: 100%; */
     z-index: -1;
     min-height: 100vh;
     background-repeat: no-repeat;
     background-attachment: scroll;
-    background-position-x: center;
-    background-position-y: top;
+    background-position: center top;
+    transform: scale(1.1);
+}
+
+/* form */
+.bop_link {
+    width: 45%;
+    height: 50px;
+    position: relative;
+}
+
+.bop_link input {
+    border: none;
+    border-radius: 40px;
+    outline: none;
+    padding: 15px 20px;
+    height: 30px;
+    width: 100%;
+    background-color: #1f1f1f;
+    color: #f2f2f2;
+    font-size: 1.2em;
+}
+
+.bop_link ::placeholder {
+    color: #f2f2f2;
+    opacity: 55%;
+}
+
+.bop_link button {
+    border: none;
+    border-radius: 30px;
+    height: 93%;
+    width: 100px;
+    background-color: #10B049;
+    color: #f2f2f2;
+    font-size: 1.2em;
+
+    position: absolute;
+    transform: translatex(32%);
+    right: 0;
+    top: 13%;
+}
+
+.bop_link button:hover {
+    background-color: #176633;
 }
