--- a/app/static/css/index-styles.css
+++ b/app/static/css/index-styles.css
@@ -1,30 +1,27 @@
-/* background */
-html, body {
-    overflow-x: hidden;
-    width: 100vw;
-    color: white;
+body {
+    background-color: #121212;
+    color: #f2f2f2;
     font-family: Helvetica, sans-serif;
-  }
+}
 
-.background {
-    position: absolute;
-    width: 100%;
-    z-index: -1;
-    min-height: 100vh;
-    background-repeat: no-repeat;
-    background-attachment: scroll;
-    background-position: center top;
-    transform: scale(1.1);
+a {
+    text-decoration: none;
+    color: #f2f2f2;
+}
+
+h1 {
+    width: fit-content;
+    font-size: 2.25em;
 }
 
 /* form */
-.bop_link {
+.bopLink {
     width: 45%;
-    height: 50px;
+    height: 60px;
     position: relative;
 }
 
-.bop_link input {
+.bopLink input {
     border: none;
     border-radius: 40px;
     outline: none;
@@ -36,15 +33,15 @@ html, body {
     font-size: 1.2em;
 }
 
-.bop_link ::placeholder {
+.bopLink ::placeholder {
     color: #f2f2f2;
     opacity: 55%;
 }
 
-.bop_link button {
+.bopLink button {
     border: none;
     border-radius: 30px;
-    height: 93%;
+    height: 75%;
     width: 100px;
     background-color: #10B049;
     color: #f2f2f2;
@@ -56,6 +53,6 @@ html, body {
     top: 13%;
 }
 
-.bop_link button:hover {
+.bopLink button:hover {
     background-color: #176633;
 }
