--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,19 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bop Dropper</title>
-    <link rel="stylesheet" href="{{url_for('static', filename='css/styles.css')}}">
-    <script src="{{url_for('static', filename='js/script.js')}}"></script>
+    <link rel="stylesheet" href="{{url_for('static', filename='css/index-styles.css')}}">
 </head>
 <body>
     <div class="background"></div>
-
-    <h1><a href="http://127.0.0.1:5000/">Bop Dropper</a></h1>
     
-    <div class="bop_link">
-        <form method="POST">
-            <input type="text" name="bop_link" size="70" placeholder="https://open.spotify.com/track/...">
-            <button type="submit">Search</button>
-        </form>
+    <div class="home">
+        <h1><a href="http://127.0.0.1:5000/">Bop Dropper</a></h1>
+        
+        <div class="bopLink">
+            <form method="POST">
+                <input type="text" name="bop_link" size="70" placeholder="https://open.spotify.com/track/...">
+                <button type="submit">Search</button>
+            </form>
+        </div>
     </div>
 
     {% if error %}
@@ -24,52 +25,5 @@
     {% else %}
         <!-- <p></p> -->
     {% endif %}
-
-    {% if bop_info %}
-        <div>
-            <h2>Searching Bop Recs</h2>
-            <p>Bop: {{ bop_info.name }}</p>
-            <p>Artists: {{ bop_info.artists | join(', ') }}</p>
-
-            <img src="{{ bop_info.image}}">
-        </div>
-        
-        <script>
-        var imageUrl = "{{ bop_info.image | safe }}";
-        setBackgroundImage(imageUrl)
-        </script>
-    {% else %}
-        <script>setBackgroundImage()</script>
-    {% endif %}
-
-    {% if recommendations %}
-        <ol>
-            {% for rec in recommendations %}
-                <li>
-                    <p>Similarity Score: {{ rec.score }}</p>
-                    <iframe style="border-radius:12px" 
-                        src="https://open.spotify.com/embed/track/{{ rec.id }}?utm_source=generator&theme=0"
-                        width="50%" height="100" frameBorder="0" allowfullscreen=""
-                        allow="clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-                        loading="lazy">
-                    </iframe>
-                </li>
-            {% endfor %}
-        </ol>
-    {% else %}
-        {% if not_db %}
-            <h3>Bop not in database...</h3>
-        {% else %}
-            <p></p>
-        {% endif %}
-    {% endif %}
-    
-    <!-- {% if add_button %}
-        <form method="POST">
-            <button type="submit">Add Bop to Database</button>
-        </form>
-    {% else %}
-        <p></p>
-    {% endif %} -->
 </body>
 </html>
