--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bop Dropper</title>
     <link rel="stylesheet" href="{{url_for('static', filename='css/index-styles.css')}}">
+    <script src="{{url_for('static', filename='js/script.js')}}"></script>
 </head>
 <body>
     <div class="background"></div>
@@ -19,6 +20,10 @@
             </form>
         </div>
     </div>
+
+    <script>
+        setupInputTruncation()
+    </script>
 
     {% if error %}
         <p class="error">{{ error }}</p>
