--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bop Dropper</title>
-    <link rel="stylesheet" href="{{url_for('static', filename='css/index-styles.css')}}">
+    <style>body {background-color: #121212;}</style>
+    <link rel="stylesheet" href="{{url_for('static', filename='css/bop-styles.css')}}">
     <script src="{{url_for('static', filename='js/script.js')}}"></script>
 </head>
 <body>
