--- a/app/templates/bop.html
+++ b/app/templates/bop.html
@@ -11,7 +11,7 @@
     <div class="background"></div>
 
     <div class="centerContainer">
-        <h1><a href="http://127.0.0.1:5000/">Bop Dropper</a></h1>
+        <h1><a href="/">Bop Dropper</a></h1>
         
         <div class="bopLink">
             <form method="POST">
