--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,7 +12,7 @@
     <div class="background"></div>
     
     <div class="home">
-        <h1><a href="http://127.0.0.1:5000/">Bop Dropper</a></h1>
+        <h1><a href="/">Bop Dropper</a></h1>
         
         <div class="bopLink">
             <form method="POST">
